Lab_reports/Lab4/Coding_A/txt_files/O_tag0050.txt
Script started on 2024-11-18 15:16:17-06:00 [TERM="xterm-256color" TTY="/dev/pts/8" COLUMNS="55" LINES="30"]
[?2004h]0;plewis@MSI: ~/Gradlab/Lab_reports/Lab4/Coding_A[01;32mplewis@MSI[00m:[01;34m~/Gradlab/Lab_reports/Lab4/Coding_A[00m$ exitrootexitroot
[?2004l   ------------------------------------------------------------------
  | Welcome to ROOT 6.30/08                        https://root.cern |
  | (c) 1995-2024, The ROOT Team; conception: R. Brun, F. Rademakers |
  | Built for linuxx8664gcc on Jul 14 2024, 22:53:16                 |
  | From tags/v6-30-08@v6-30-08                                      |
  | With c++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0                   |
  | Try '.help'/'.?', '.demo', '.license', '.credits', '.quit'/'.q'  |
   ------------------------------------------------------------------

[0mroot [0] .q[D[DRun1[0m[38;5;83m[1m()[D[D[D[D[D[D[0m.L Peak_Sources_Finding.C 
[0mIn file included from input_line_8:1:
[1m/home/plewis/Gradlab/Lab_reports/Lab4/Coding_A/Peak_Sources_Finding.C:56:35: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'N'[0m
    double Count_err = sqrt(N_t + N); 
[0;1;32m                                  ^
[0m[0mroot [1] .q
[0m[?2004h]0;plewis@MSI: ~/Gradlab/Lab_reports/Lab4/Coding_A[01;32mplewis@MSI[00m:[01;34m~/Gradlab/Lab_reports/Lab4/Coding_A[00m$ root
[?2004l   ------------------------------------------------------------------
  | Welcome to ROOT 6.30/08                        https://root.cern |
  | (c) 1995-2024, The ROOT Team; conception: R. Brun, F. Rademakers |
  | Built for linuxx8664gcc on Jul 14 2024, 22:53:16                 |
  | From tags/v6-30-08@v6-30-08                                      |
  | With c++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0                   |
  | Try '.help'/'.?', '.demo', '.license', '.credits', '.quit'/'.q'  |
   ------------------------------------------------------------------

[0mroot [0] .q[D[D.L Peak_Sources_Finding.C 
[0m[0mroot [1] .L Peak_Sources_Finding.C [D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D.q[K[D[D.L Peak_Sources_Finding.C [D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D.q[K[D[DRun1[0m[38;5;83m[1m()
[0mEnter fit range for Peak 1:
Start: 882 892
End: Enter first background range for Peak 1:
Start: 872 882
End: Enter second background range for Peak 1:
Start: 892 902
End: ****************************************
Minimizer is Minuit2 / Migrad
Chi2                      =      2.51766
NDf                       =            3
Edm                       =  5.96153e-08
NCalls                    =           61
Constant                  =      2921.25   +/-   48.8548     
Mean                      =      887.937   +/-   0.00993989  
Sigma                     =     0.719493   +/-   0.0068382    	 (limited)
Peak 1 Mean = 887.937
Peak 1 Total: N_t = 5268.48
Peak 1 Background: N_b = 0
Peak 1 Signal: N_s = 5268.48
Peak 1 Std Error = 0.00991251
Peak 1Sigma_counts = 72.5843
Enter fit range for Peak 2:
Start: 260 370
End: Enter first background range for Peak 2:
Start: 150 260
End: Enter second background range for Peak 2:
Start: 370 480
End: ****************************************
Minimizer is Minuit2 / Migrad
Chi2                      =      2531.21
NDf                       =           91
Edm                       =  1.07767e-08
NCalls                    =          104
Constant                  =       750.83   +/-   9.08827     
Mean                      =       338.76   +/-   0.0646242   
Sigma                     =      5.26815   +/-   0.0363096    	 (limited)
Peak 2 Mean = 338.76
Peak 2 Total: N_t = 9914.93
Peak 2 Background: N_b = 113.5
Peak 2 Signal: N_s = 9801.43
Peak 2 Std Error = 0.0532124
Peak 2Sigma_counts = 100.142
[0mroot [2] .q
[0m[?2004h]0;plewis@MSI: ~/Gradlab/Lab_reports/Lab4/Coding_A[01;32mplewis@MSI[00m:[01;34m~/Gradlab/Lab_reports/Lab4/Coding_A[00m$ exit
[?2004lexit

Script done on 2024-11-18 15:18:59-06:00 [COMMAND_EXIT_CODE="0"]
